# REFPROP-cpp-wrapper

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  CMakePresets.json
example/include/MyProject/: test_utils.h
example/src/: main.cpp
include/Refprop/: refprop_v10.h  utils.h
src/: refprop_v10.cpp
